k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  namespace: streaming-platform

spec:
  ingressClassName: nginx

  rules:
    - host: streaming.local
      http:
        paths:

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081

          - path: /content
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081

          - path: /ingestion
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081

          - path: /streaming
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081

          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081
